[tool.poetry]
name = "sitri"
version = "0.10.24"
description = "Library for one endpoint config managment"
authors = ["Alexander Lavrov <egnod@ya.ru>"]
license = "MIT"

keywords = ["packaging", "poetry", "config", "configuration", "managment", "consul", "vault", "pydantic", "json", "yaml", "environment"]

repository = "https://github.com/Egnod/sitri"
documentation = "https://sitri.readthedocs.io"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.5.1"
pydantic = "^1.7.3"

redis = { version = "^3.5.3", optional = true }
vedis = { version = "^0.7.1", optional = true }
pyyaml = { version = "^5.3.1", optional = true }
hvac = { version = "^0.10.5", optional = true }
python-consul = {version = "^1.1.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "=6.1.2"
pytest-mock = "^3.3.1"
coverage = "^4.5"
pytest-cov = "^2.7"
tidypy = "^0.11.0"
pytest-lazy-fixture = "^0.6.3"
pytest_cases = "^2.2.2"

bumpversion = "^0.5.3"
pre-commit = "^1.18"

[tool.poetry.extras]
redis = ["redis"]
vedis = ["vedis"]
pyyaml = ["pyyaml"]
hvac = ["hvac"]
consul = ["python-consul"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
